# text_to_knowledge

./: .gitignore  AUTHORS  README.md  count_code_lines.sh  pyproject.toml  requirements.txt
examples/anthroposophy/: run_save_llm_request.sh
examples/anthroposophy/configs/: add_categories.py  add_chapter_summaries.py  add_chapter_summaries_reflect.py  add_chunk_summaries.py  add_chunk_summaries_reflect.py
examples/anthroposophy/ebook_texts/: 00_file_list.txt  GA_22.txt  GA_345.txt
examples/anthroposophy/json_save_llm_request/: GA_22.json  GA_345.json
examples/anthroposophy/training_data/: GA_345_category_llm.json  GA_345_summarie_llm.json  GA_345_summarie_reflected_llm.json
examples/project_gutenberg/: run.sh  run_save_llm_request.sh
examples/project_gutenberg/configs/: add_categories_config.py  add_chapter_question_answers_complex_config.py  (+7 more)
src/ttk/: augment_books.py  books_to_json.py  external_config_loader.py  file_parser.py  generate_training_data.py  remove_llm_requests_from_json.py  utils.py
testing/: test_add_categories.py  test_add_chapter_answers.py  test_add_chapter_questions.py  test_add_chapter_summaries.py  test_add_chunk_answers.py  test_add_chunk_questions.py  test_add_chunk_summaries.py  test_book_model.py  test_chapter_model.py  test_chunk_model.py  test_external_config_loading.py  test_single_file_processing.py  test_single_file_processing_integration.py  test_text_base_model.py  test_utils.py
testing/data/: add_chunk_summary_config.py  book_sample.json  book_sample.txt  short_sample.json  short_sample.txt
(+36 files in other folders)
